# PickUpPhoto

./: .gitignore  LICENSE  README.md  app_icon.icns  build_dmg.sh  pyproject.toml
pickupphoto/: __init__.py  __main__.py
pickupphoto/analysis/: burst_grouper.py  exposure.py  face_focus.py  motion_blur.py  sharpness.py
pickupphoto/core/: database.py  raw_loader.py  scanner.py  settings.py  thumbnail_cache.py
pickupphoto/output/: exporter.py
pickupphoto/ui/: analysis_panel.py  app.py  export_dialog.py  grid_view.py  single_view.py
tests/: test_analysis.py  test_core.py  test_integration.py
